--- a/htec-project/src/scss/base/_elements.scss
+++ b/htec-project/src/scss/base/_elements.scss
@@ -9,8 +9,18 @@ body {
 
 body {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
+}
+
+.body-wrapper {
+    border: 1px solid $border-color;
+    max-width: 1100px;
+    margin: 0 auto;
+    width: 100%;
+    
 }
 
 .main {
@@ -50,4 +60,13 @@ ol {
 li > ul,
 li > ol {
 	margin: 0 0 0 10px;
-} 
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Montserrat', sans-serif;
+}
