--- a/htec-project/src/scss/base/_reset.scss
+++ b/htec-project/src/scss/base/_reset.scss
@@ -22,6 +22,10 @@ html {
 
 body {
   margin: 0;
+
+  * {
+    box-sizing: border-box;
+  }
 }
 
 /**
@@ -75,6 +79,7 @@ pre {
 
 a {
   background-color: transparent;
+  text-decoration: none;
 }
 
 /**
