--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -1,14 +1,22 @@
-<h1 class="logo">Logo</h1>
-<nav class="nav">
-    <ul class="nav-menu">
-        <li class="nav-menu-link">
-            <a href="/">Home</a>
-        </li>
-        <li class="nav-menu-link">
-            <a href="/about">About</a>
-        </li>
-        <li class="nav-menu-link">
-            <a href="/contact">Contact</a>
-        </li>
-    </ul>
-</nav>
+<div class="header-wrapper">
+    <div class="header-wrapper-item">
+        <span class="header-navigation-burger"></span>
+        <div class="header-navigation">
+            <a href="javascript:;" class="header-navigation-link">Top news</a>
+            <a href="javascript:;" class="header-navigation-link">Categories</a>
+            <div class="header-navigation-search">
+                <span class="js-input-trigger header-navigation-link">Search</span>
+                <div class="js-input-wrapper input-wrapper hide">
+                    <input type="text" class="header-input">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header-wrapper-item">
+        <span class="header-lang-burger"></span>
+        <div class="header-lang">
+            <a href="javascript:;" class="header-lang-btn btn-is-active">gb</a>
+            <a href="javascript:;" class="header-lang-btn">en</a>
+        </div>
+    </div>
+</div>
