--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -5,8 +5,8 @@
             <a href="javascript:;" class="header-navigation-link">Top news</a>
             <a href="javascript:;" class="header-navigation-link">Categories</a>
             <div class="header-navigation-search">
-                <span class="js-input-trigger header-navigation-link">Search</span>
-                <div class="js-input-wrapper input-wrapper hide">
+                <span id="js-input-trigger" class="header-navigation-link">Search</span>
+                <div id="js-input-wrapper" class="header-input-wrapper">
                     <input type="text" class="header-input">
                 </div>
             </div>
