--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -15,8 +15,8 @@
     <div class="header-wrapper-item">
         <span class="header-lang-burger"></span>
         <div class="header-lang">
-            <a href="javascript:;" class="header-lang-btn btn-is-active">gb</a>
-            <a href="javascript:;" class="header-lang-btn">en</a>
+            <a href="javascript:;" class="js-header-lang-btn header-lang-btn btn-is-active">gb</a>
+            <a href="javascript:;" class="js-header-lang-btn header-lang-btn">en</a>
         </div>
     </div>
 </div>
