Added top news for gb language as default

--- a/htec-project/src/templates/index.hbs
+++ b/htec-project/src/templates/index.hbs
@@ -1,7 +1,7 @@
 {{#> layouts/base title="Page One" }}
 
     {{#*inline "main-block"}}
-        Custom page content.
+        <ul id="top-results"></ul>
     {{/inline}}
 
 {{/layouts/base}}
