--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -2,8 +2,8 @@
     <div class="header-wrapper-item">
         <span class="header-navigation-burger"></span>
         <div class="header-navigation">
-            <a href="javascript:;" class="header-navigation-link">Top news</a>
-            <a href="javascript:;" class="header-navigation-link">Categories</a>
+            <a href="javascript:;" class="header-navigation-link js-tab" data-id='tab-top-news'>Top news</a>
+            <a href="javascript:;" class="header-navigation-link js-tab" data-id='tab-categories'>Categories</a>
             <div class="header-navigation-search">
                 <span id="js-input-trigger" class="header-navigation-link">Search</span>
                 <div id="js-input-wrapper" class="header-input-wrapper">
