Top story updates

--- a/htec-project/src/scss/base/_colors.scss
+++ b/htec-project/src/scss/base/_colors.scss
@@ -3,6 +3,7 @@
 //--------------------------------------------------------------
 
 $dark-txt-color: #000a14;
+$btn-color: #4A98DA;
+$header-bg: #fff;
+$body-bg: #e7eaed;
 $border-color: #808080;
-$btn-color: #c09175;
-$header-bg: #fee3D4;
