--- a/htec-project/src/scss/base/_elements.scss
+++ b/htec-project/src/scss/base/_elements.scss
@@ -2,30 +2,24 @@
 // HTML Elements
 //--------------------------------------------------------------
 
-html,
 body {
-    overflow-x: hidden;
-}
-
-body {
+    background-color: $body-bg;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     min-height: 100vh;
     font-family: 'Roboto', sans-serif;
 }
 
-.body-wrapper {
-    border: 1px solid $border-color;
-    max-width: 1100px;
-    margin: 0 auto;
-    width: 100%;
-    
-}
-
 .main {
     flex-grow: 1;
     margin: auto;
+}
+
+.container {
+    max-width: 1130px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 //-----------------------------------------
@@ -45,7 +39,8 @@ figure {
 // Lists
 //-----------------------------------------
 ul,
-ol {
+ol,
+p {
 	margin: 0;
 }
 
