--- a/htec-project/src/scss/modules/_header.scss
+++ b/htec-project/src/scss/modules/_header.scss
@@ -3,8 +3,9 @@
 //--------------------------------------------------------------
 
 .header {
+    border-bottom: 1px solid $border-color;
     background-color: $header-bg;
-    margin-bottom: 15px;
+    margin-bottom: 45px;
     padding: 20px;
 }
 
@@ -21,12 +22,30 @@
 }
 
 .header-navigation-link {
-    border-right: 1px solid ;
     color: $dark-txt-color;
     cursor: pointer;
-    font-size: 25px;
+    font-size: 15px;
     margin-right: 10px;
     padding-right: 10px;
+    position: relative;
+
+    &:before {
+        background-color: $btn-color;
+        bottom: -30px;
+        content: '';
+        display: block;
+        height: 3px;
+        left: 0;
+        position: absolute;
+        transition: all .2s ease;
+        width: 0;
+    }
+
+    &:hover {
+        &:before {
+            width: 100%;
+        }
+    }
 }
 
 .header-lang-btn {
