--- a/htec-project/src/scss/modules/_top-results.scss
+++ b/htec-project/src/scss/modules/_top-results.scss
@@ -8,25 +8,41 @@
     margin: 0 -15px;
     padding: 0;
 
+    li {
+        display: flex;
+        flex-direction: column;
+        max-width: 33.3%;
+        margin-bottom: 15px;;
+        padding: 0 15px;
+        width: 33.3%;
+        
+        > div {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            background-color: #fff;
+            border-radius: 3px;
+            overflow: hidden;
+            text-align: center;
+        }
+    }
+
     img {
         width: 100%;
     }
 
     h2 {
+        border-bottom: 1px solid $border-color;
+        font-size: 18px;
+        margin: 0 auto 15px;
+        max-width: 70%;
+        padding: 15px 0;
         word-break: break-all;
-        flex-grow: 1;
-        margin: 0;
-    }
-
-    li {
-        display: flex;
-        flex-direction: column;
-        max-width: 33.3%;
-        width: 33.3%;
-        padding: 0 15px;
+        width: 100%;
     }
 
     p {
         flex-grow: 1;
+        padding: 0 15px 15px;
     }
 }
