--- a/htec-project/src/templates/layouts/base.hbs
+++ b/htec-project/src/templates/layouts/base.hbs
@@ -15,19 +15,18 @@
         </title> 
     </head>
     <body>
-        <div class="body-wrapper">
-            <header class="header">
-                {{#> header-block}}
-                    {{> ../partials/header }}
-                {{/header-block}}
-            </header>
-            <main class="main">
+        <header class="header">
+            {{#> header-block}}
+                {{> ../partials/header }}
+            {{/header-block}}
+        </header>
+        <main class="main">
+            <div class="container">
                 {{#> main-block}}
                     <p>This is the default main block content.</p>
                 {{/main-block}}
-            </main>
-        </div>
-
+            </div>
+        </main>
         <footer class="footer">
             {{#> footer-block}}
                 {{> ../partials/footer }}
