Category section style update

--- a/htec-project/src/scss/modules/_header.scss
+++ b/htec-project/src/scss/modules/_header.scss
@@ -75,10 +75,10 @@
 }
 
 .header-input {
-    background-color: #fff;
+    background-color: $body-bg;
     border: 0;
     color: $dark-txt-color;
-    font-size: 18px;
+    font-size: 15px;
     outline: none;
     padding: 8px;;
 }
