--- a/htec-project/src/scss/modules/_accordion.scss
+++ b/htec-project/src/scss/modules/_accordion.scss
@@ -2,32 +2,29 @@
 // Accordion
 //--------------------------------------------------------------
 
+.accordion-item {
+    margin-bottom: 20px;
+}
+
+.accordion-title {
+    border-bottom: 1px solid $border-color;
+    color: $dark-txt-color;
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    padding: 0 0 20px 20px;
+    text-transform: uppercase;
+    width: 100%;
+}
+
 .accordion-content {
     height: 0;
+    margin-top: 20px;
     overflow: hidden;
     transition: all .2s ease;
 
     .accordion-is-active & {
         height: initial;
-    }
-}
-
-.category-news {
-    display: flex;
-    overflow-x: auto;
-
-    li {
-        flex-shrink: 0;
-        max-width: 20%;
-        width: 20%;
-    }
-
-    h2 {
-        word-break: break-all;
-        font-size: 17px;;
-    }
-
-    img {
-        width: 100%;
     }
 }
