--- a/htec-project/src/scss/modules/_news.scss
+++ b/htec-project/src/scss/modules/_news.scss
@@ -3,19 +3,41 @@
 //--------------------------------------------------------------
 
 .top-results {
-    display: flex;
     flex-wrap: wrap;
     margin: 0 -15px;
+
+    li {
+        max-width: 33.3%;
+        margin-bottom: 20px;;
+        padding: 0 10px;
+        width: 33.3%;
+    }
+
+    p {
+        flex-grow: 1;
+    }
+}
+
+.category-news {
+    overflow-x: auto;
+
+    li {
+        flex-shrink: 0;
+        max-width: calc(20% - 10px);
+        margin-right: 10px;;
+        width: calc(20% - 10px);
+    }
+}
+
+.top-results,
+.category-news {
+    display: flex;
     padding: 0;
 
     li {
         display: flex;
         flex-direction: column;
-        max-width: 33.3%;
-        margin-bottom: 15px;;
-        padding: 0 15px;
-        width: 33.3%;
-        
+
         > div {
             display: flex;
             flex-direction: column;
@@ -33,7 +55,7 @@
 
     h2 {
         border-bottom: 1px solid $border-color;
-        font-size: 18px;
+        font-size: 17px;
         margin: 0 auto 15px;
         max-width: 70%;
         padding: 15px 0;
@@ -42,7 +64,7 @@
     }
 
     p {
-        flex-grow: 1;
+        font-size: 14px;
         padding: 0 15px 15px;
     }
 }
