CateAccordion style update

--- a/htec-project/src/scss/modules/_header.scss
+++ b/htec-project/src/scss/modules/_header.scss
@@ -41,7 +41,8 @@
         width: 0;
     }
 
-    &:hover {
+    &:hover,
+    &.link-is-active {
         &:before {
             width: 100%;
         }
