--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -2,7 +2,7 @@
     <div class="header-wrapper-item">
         <span class="header-navigation-burger"></span>
         <div class="header-navigation">
-            <a href="javascript:;" class="header-navigation-link js-tab" data-id='tab-top-news'>Top news</a>
+            <a href="javascript:;" class="header-navigation-link js-tab link-is-active" data-id='tab-top-news'>Top news</a>
             <a href="javascript:;" class="header-navigation-link js-tab" data-id='tab-categories'>Categories</a>
             <div class="header-navigation-search">
                 <span id="js-input-trigger" class="header-navigation-link">Search</span>
