--- a/htec-project/src/scss/modules/_accordion.scss
+++ b/htec-project/src/scss/modules/_accordion.scss
@@ -19,12 +19,11 @@
 }
 
 .accordion-content {
-    height: 0;
+    max-height: 0;
     margin-top: 20px;
     overflow: hidden;
-    transition: all .2s ease;
 
     .accordion-is-active & {
-        height: initial;
+        max-height: initial;
     }
 }
