--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -1,13 +1,17 @@
 <div class="header-wrapper">
     <div class="header-wrapper-item">
-        <span class="header-navigation-burger"></span>
         <div class="header-navigation">
-            <a href="javascript:;" class="header-navigation-link js-tab link-is-active" data-id='tab-top-news'>Top news</a>
-            <a href="javascript:;" class="header-navigation-link js-tab" data-id='tab-categories'>Categories</a>
+            <span class="header-navigation-burger" id="js-header-navigation-burger">
+                <span class="burger-item"></span>
+            </span>
+            <div class="header-navigation-wrapper" id="js-header-navigation-wrapper">
+                <a href="javascript:;" class="header-navigation-link js-tab link-is-active" data-id='tab-top-news'>Top news</a>
+                <a href="javascript:;" class="header-navigation-link js-tab" data-id='tab-categories'>Categories</a>
+            </div>
             <div class="header-navigation-search">
                 <span id="js-input-trigger" class="header-navigation-link">Search</span>
                 <div id="js-input-wrapper" class="header-input-wrapper">
-                    <input type="text" class="header-input">
+                    <input type="text" id='js-input' class="header-input">
                 </div>
             </div>
         </div>
