--- a/htec-project/src/scss/modules/_news.scss
+++ b/htec-project/src/scss/modules/_news.scss
@@ -11,6 +11,11 @@
         margin-bottom: 20px;;
         padding: 0 10px;
         width: 33.3%;
+
+        @media only screen and (max-width: 600px) {
+            max-width: 100%;
+            width: 100%;
+        }
     }
 
     p {
@@ -26,6 +31,11 @@
         max-width: calc(20% - 10px);
         margin-right: 10px;;
         width: calc(20% - 10px);
+
+        @media only screen and (max-width: 600px) {
+            max-width: calc(100% - 10px);
+            width: calc(100% - 10px);
+        }
     }
 }
 
