Accordion responive style updates

--- a/htec-project/src/templates/index.hbs
+++ b/htec-project/src/templates/index.hbs
@@ -6,7 +6,7 @@
                 <ul id="js-top-results" class="top-results"></ul>
             </div>
             <div class="tab-item" id="tab-categories">
-                <div class="accordion">
+                <div id="js-accordion" class="accordion">
                     <div class="accordion-item accordion-is-active">
                         <a href="javascript:;" class="accordion-title js-accordion-title">business</a>
                         <div class="accordion-content">
