--- a/htec-project/src/scss/base/_elements.scss
+++ b/htec-project/src/scss/base/_elements.scss
@@ -16,10 +16,14 @@ body {
 }
 
 .container {
-    max-width: 1130px;
+    max-width: 100%;
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
+    
+    @media only screen and (min-width: 600px) {
+        max-width: 1130px;
+    }
 }
 
 //-----------------------------------------
