--- a/htec-project/src/templates/index.hbs
+++ b/htec-project/src/templates/index.hbs
@@ -52,6 +52,9 @@
                 </div>
             </div>
         </div>
+        <div class="tab-item" id="tab-search">
+            <ul id="js-search" class="search"></ul>
+        </div>
     {{/inline}}
 
 {{/layouts/base}}
