--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -10,7 +10,10 @@
                 <div class="header-navigation-search">
                     <span id="js-input-trigger" class="header-navigation-link">Search</span>
                     <div id="js-input-wrapper" class="header-input-wrapper">
-                        <input type="text" id='js-input' class="header-input">
+                        <form id="js-form">
+                            <input type="text" class="header-input" id="js-input">
+                            <button type="submit" id="js-submit" class="header-submit">Search</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -18,7 +21,7 @@
     </div>
     <div class="header-wrapper-item">
         <span class="header-lang-burger"></span>
-        <div class="header-lang">
+        <div id="js-header-lang" class="header-lang">
             <a href="javascript:;" class="js-header-lang-btn header-lang-btn btn-is-active">gb</a>
             <a href="javascript:;" class="js-header-lang-btn header-lang-btn">us</a>
         </div>
