Input search button fixes

--- a/htec-project/src/templates/partials/header.hbs
+++ b/htec-project/src/templates/partials/header.hbs
@@ -12,7 +12,7 @@
                     <div id="js-input-wrapper" class="header-input-wrapper">
                         <form id="js-form">
                             <input type="text" class="header-input" id="js-input">
-                            <button type="submit" class="header-submit js-tab" data-id="tab-search">Search</button>
+                            <button type="submit" class="header-submit">Search</button>
                         </form>
                     </div>
                 </div>
