--- a/htec-project/src/scss/modules/_news.scss
+++ b/htec-project/src/scss/modules/_news.scss
@@ -33,6 +33,11 @@
         margin-right: 10px;;
         width: calc(20% - 10px);
 
+        @media only screen and (max-width: 750px) {
+            max-width: calc(33.3% - 10px);
+            width: calc(33.3% - 10px);
+        }
+
         @media only screen and (max-width: 600px) {
             max-width: calc(100% - 10px);
             width: calc(100% - 10px);
@@ -55,7 +60,7 @@
             flex-direction: column;
             flex-grow: 1;
             background-color: #fff;
-            border-radius: 3px;
+            border-radius: 15px;
             overflow: hidden;
             text-align: center;
         }
