--- a/htec-project/src/templates/index.hbs
+++ b/htec-project/src/templates/index.hbs
@@ -10,42 +10,49 @@
                     <div class="accordion-item accordion-is-active">
                         <a href="javascript:;" class="accordion-title js-accordion-title">business</a>
                         <div class="accordion-content">
+                            <span class="accordion-tooltip animation-opacity">Scroll with mouse to right</span>
                             <ul class='category-news' id="js-business"></ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <a href="javascript:;" class="accordion-title js-accordion-title">entertainment</a>
                         <div class="accordion-content">
+                            <span class="accordion-tooltip animation-opacity">Scroll with mouse to right</span>
                             <ul class='category-news' id="js-entertainment"></ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <a href="javascript:;" class="accordion-title js-accordion-title">general</a>
                         <div class="accordion-content">
+                            <span class="accordion-tooltip animation-opacity">Scroll with mouse to right</span>
                             <ul class='category-news' id="js-general"></ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <a href="javascript:;" class="accordion-title js-accordion-title">health</a>
                         <div class="accordion-content">
+                            <span class="accordion-tooltip animation-opacity">Scroll with mouse to right</span>
                             <ul class='category-news' id="js-health"></ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <a href="javascript:;" class="accordion-title js-accordion-title">science</a>
                         <div class="accordion-content">
+                            <span class="accordion-tooltip animation-opacity">Scroll with mouse to right</span>
                             <ul class='category-news' id="js-science"></ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <a href="javascript:;" class="accordion-title js-accordion-title">sports</a>
                         <div class="accordion-content">
+                            <span class="accordion-tooltip animation-opacity">Scroll with mouse to right</span>
                             <ul class='category-news' id="js-sports"></ul>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <a href="javascript:;" class="accordion-title js-accordion-title">technology</a>
                         <div class="accordion-content">
+                            <span class="accordion-tooltip animation-opacity">Scroll with mouse to right</span>
                             <ul class='category-news' id="js-technology"></ul>
                         </div>
                     </div>
