--- a/htec-project/src/scss/modules/_news.scss
+++ b/htec-project/src/scss/modules/_news.scss
@@ -85,3 +85,11 @@
         padding: 0 15px 15px;
     }
 }
+
+.search {
+
+    .search-message {
+        font-size: 20px;
+        text-align: center;
+    }
+}
